--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PGDATABASE=your_database_name
 PGUSER=your_database_user
 PGPASSWORD=your_database_password
 PGPORT=5432
-DATABASE_URL=postgresql://your_database_user:your_database_password@ep-xxxxx.us-east-2.aws.neon.tech:5432/your_database_name
+DATABASE_URL=psql 'postgresql://neondb_owner:npg_HRZmXBGzYF02@ep-blue-star-aeetcn0t-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # Email (SMTP) settings for reminders
 SMTP_HOST=smtp.example.com
